syntax = "proto3";

package clientapi;

import "github.com/relab/gorums/gorums.proto";

option go_package = "github.com/relab/hotstuff/clientapi";

// HotStuffSMR is the client-facing API to hotstuff
service HotStuffSMR {
	// ExecCommand sends a command to all replicas and waits for valid signatures from f+1 replicas
	rpc ExecCommand(Command) returns (Empty) {
		option (gorums.async) = true;
		option (gorums.quorumcall) = true;
		option (gorums.ordered) = true;
	}
}

message Command {
	uint32 ClientID = 1;
	uint64 SequenceNumber = 2;
	bytes Data = 3;
}

message Empty {}
